<resources>
    <string name="app_name">Oči na ceste</string>
    <string name="title_activity_maps">Map</string>
    <string name="dropped_pin">Droped Pin</string>
    <string name="pridanie_noveho_hlasenia_problemu">Pridanie nového hlásenia</string>
    <string name="cancel">Zrušiť</string>
    <string name="confim">Potvrdiť</string>
    <string name="kategoria">Kategoria</string>
    <string name="stav_problemu">Stav problému</string>
    <string name="popis_problemu">Popis problému *</string>
    <string name="message">kliknutie uspesne</string>
    <string name="OciNaCeste">Oči na Ceste</string>
    <string name="NahlasProblemyNaCestach">Nahlás problémy na cestách</string>
    <string name="profil">profil</string>
    <string name="settings">nastavenia</string>
    <string name="moje_problemy">Moje problémy</string>
    <string name="vsetky_problemy">Všetky problémy</string>
    <string name="zoznam_pouzivatel">Zoznam použivatelov</string>
    <string name="mapa_problemov">Mapa problémov</string>

    <string name="spinner_name">SpinnerInKotlin</string>
    <string name="selected_item">Selected item:</string>

    <string-array name="Languages">
        <item>Vyberte typ problému</item>
        <item>Stav vozovky</item>
        <item>Dopravné značenie</item>
        <item>Kvalita opravy</item>
        <item>Zelen</item>
    </string-array>

    <string name="spinner2_name">SpinnerInKotlin</string>
    <string name="nove_hlasenie">Nové hlasenie</string>
    <string name="api_key">api_key</string>
    <string name="prihlaseny">Prihláseny</string>
    <string name="profil1">Profil</string>
    <string name="prihlasit">Prihlásiť</string>
    <string name="odhlasit">Odhlásiť</string>
    <string name="regsitracia">Regsitrácia</string>

    <string-array name="stav_problemu">
        <item>Vyberte stav problému</item>
        <item>Chybajuca</item>
        <item>Poškodená</item>
        <item>Vyblednuta</item>
        <item>Zle viditelna</item>
        <item>Prerastena</item>
    </string-array>

    <string-array name="role">
        <item>Verejnosť</item>
        <item>Dispečer</item>
        <item>Manažér</item>
        <item>Administrátor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Yes" style="color:black">Áno</string>
    <string name="Vymazat"><font fgcolor="#ff9a1d1d">Vymazať!</font></string>
    <string name="Zrusit"><font fgcolor="#00000">Zrušiť</font></string>
    <string name="ZmenaRole"><font fgcolor="#ff9a1d1d">Potvrdiť</font></string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_edit_profil1">EditProfilActivity1</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vybrat_foto">PRIDAJTE FOTO</string>
</resources>